[package]
name = "core"
version = "0.1.0"
authors = ["Alexey Ermakov <n3r0bi0m4n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
tokio = { version = "0.2", features = ["full"] }
parser = { path = "../parser" }
