[package]
name = "parser"
version = "0.1.0"
authors = ["Alexey Ermakov <n3r0bi0m4n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
simd-json = "0.3.17"
rayon = "1.3.1"